--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ capybara-*.html
 **.orig
 rerun.txt
 pickle-email-*.html
+.DS_Store
+app/.DS_Store
+app/assets/.DS_Store
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 # config/initializers/secret_token.rb
