--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
+public/assets/
+current
+last_version
+releases/
+scm/
+shared/
 *.rbc
 capybara-*.html
 .rspec
