--- a/.gitignore
+++ b/.gitignore
@@ -4,54 +4,34 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
-public/assets/
-/public/assets/
-current
-last_version
-releases/
-scm/
-shared/
-*.rbc
-capybara-*.html
-.rspec
-/log
-/tmp
+# Ignore bundler config.
+/.bundle
+
+# Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
-/public/system
-/coverage/
-/doc/
+
+# Ignore all logfiles and tempfiles.
+.rspec
+/log/*
+!/log/.keep
+/tmp
 /spec/tmp
+
+# config
 /config/database.yml
 /config/config.yml
 /config/initializers/weixin_rails_middleware.rb
-**.orig
-rerun.txt
-pickle-email-*.html
+
+# public & doc
+/doc/*
+/public/system/*
+/public/assets/*
+/solr/
+/vendor/*
+
 .DS_Store
 app/.DS_Store
 app/assets/.DS_Store
 node_modules/
 node_modules/*
-
-# TODO Comment out these rules if you are OK with secrets being uploaded to the repo
-# config/initializers/secret_token.rb
-# config/secrets.yml
-
-## Environment normalisation:
-/.bundle
-/vendor/bundle
-
-# these should all be checked in to normalise the environment:
-# Gemfile.lock, .ruby-version, .ruby-gemset
-
-# unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
-.rvmrc
-
-# if using bower-rails ignore default bower_components path bower.json files
-/vendor/assets/bower_components
-*.bowerrc
-bower.json
-
-# Ignore pow environment settings
-.powenv
