--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,12 @@ app/.DS_Store
 app/assets/.DS_Store
 node_modules/
 node_modules/*
+
 /Find Results
 /Deploy.md
 /Env.md
+
+current
+last_version
+releases/
+shared/
